--- a/PTIRelianceLib/PTIRelianceLib.csproj
+++ b/PTIRelianceLib/PTIRelianceLib.csproj
@@ -3,6 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>Cory Todd &lt;cory@pyramidacceptors.com&gt;</Authors>
+    <Company>Pyramid Technologies Inc.</Company>
+    <Description>A Reliance Thermal printer API that support firmware updates and configuration. This requires the Reliance printer to be connected via USB.</Description>
+    <Copyright>2018</Copyright>
+    <PackageLicenseUrl>https://pti.mit-license.org/</PackageLicenseUrl>
+    <PackageReleaseNotes>Supports flash updating, confguration read, and configuration write</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
