Make native libs work on nuget
This seems unbelievably complicated but it appears to be
working. The flow is PTIRelianceLib.csproj->NativeDeps.csproj.include->NativeDeps.$OS.csproj.include

Move all native libs to lib/ directory to keep nuget happy
move header reference file to PTIRelianceLib/include/

--- a/PTIRelianceLib/PTIRelianceLib.csproj
+++ b/PTIRelianceLib/PTIRelianceLib.csproj
@@ -10,12 +10,15 @@
     <Copyright>2018</Copyright>
     <PackageLicenseUrl>https://pti.mit-license.org/</PackageLicenseUrl>
     <PackageReleaseNotes>Supports flash updating, confguration read, and configuration write</PackageReleaseNotes>
-    <Version>0.1.0</Version>
+    <Version>0.1.14</Version>
     <PackageProjectUrl>https://github.com/PyramidTechnologies/PTI.Reliance.Tools</PackageProjectUrl>
     <RepositoryUrl>https://github.com/PyramidTechnologies/PTI.Reliance.Tools</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>dotnet-core thermal-printer hid</PackageTags>
     <PackageIconUrl>https://pyramidacceptors.com/favicon.ico</PackageIconUrl>
+    <AssemblyVersion>0.1.14.0</AssemblyVersion>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -25,6 +28,20 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-  </ItemGroup>
-
+    <Content Include="..\lib\x64\linux\libhidapi.so">
+      <PackagePath>runtimes/linux/native/libhidapi.so</PackagePath>
+      <Pack>true</Pack>
+    </Content>
+    <Content Include="..\lib\x86\windows\hidapi.dll">
+      <PackagePath>runtimes/win-x86/native/hidapi.dll</PackagePath>
+      <Pack>true</Pack>
+    </Content>
+    <Content Include="..\lib\x64\windows\hidapi.dll">
+      <PackagePath>runtimes/win-x64/native/hidapi.dll</PackagePath>
+      <Pack>true</Pack>
+    </Content>
+  </ItemGroup>  
+  
+   <Import Project="NativeDeps.csproj.include" />
+ 
 </Project>
