fixed bug in win-x64 nuget where dll was not getting packed
This generates warnings about the dll being outside the lib directory but things appear to be working
and more importantly, that's exactly where they are! Given how difficult this was to configure,
I suspect that their is a bug somewhere.

--- a/PTIRelianceLib/PTIRelianceLib.csproj
+++ b/PTIRelianceLib/PTIRelianceLib.csproj
@@ -10,13 +10,13 @@
     <Copyright>2018</Copyright>
     <PackageLicenseUrl>https://pti.mit-license.org/</PackageLicenseUrl>
     <PackageReleaseNotes>Supports flash updating, confguration read, and configuration write</PackageReleaseNotes>
-    <Version>0.1.14</Version>
+    <Version>0.1.18</Version>
     <PackageProjectUrl>https://github.com/PyramidTechnologies/PTI.Reliance.Tools</PackageProjectUrl>
     <RepositoryUrl>https://github.com/PyramidTechnologies/PTI.Reliance.Tools</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>dotnet-core thermal-printer hid</PackageTags>
     <PackageIconUrl>https://pyramidacceptors.com/favicon.ico</PackageIconUrl>
-    <AssemblyVersion>0.1.14.0</AssemblyVersion>
+    <AssemblyVersion>0.1.18.0</AssemblyVersion>
 	<GenerateDocumentationFile>true</GenerateDocumentationFile>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
@@ -28,20 +28,30 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-    <Content Include="..\lib\x64\linux\libhidapi.so">
+    <Content Include="..\lib\x64\linux\libhidapi.so" Visible="false">
       <PackagePath>runtimes/linux/native/libhidapi.so</PackagePath>
       <Pack>true</Pack>
     </Content>
-    <Content Include="..\lib\x86\windows\hidapi.dll">
-      <PackagePath>runtimes/win-x86/native/hidapi.dll</PackagePath>
-      <Pack>true</Pack>
-    </Content>
-    <Content Include="..\lib\x64\windows\hidapi.dll">
+    <Content Include="..\lib\x64\windows\hidapi.dll" Visible="false">
       <PackagePath>runtimes/win-x64/native/hidapi.dll</PackagePath>
+      <Pack>true</Pack>
+    </Content>	
+    <Content Include="..\lib\x86\windows\hidapi.dll" Visible="false">
+      <PackagePath>runtimes/win-x86/native/hidapi.dll</PackagePath>
       <Pack>true</Pack>
     </Content>
   </ItemGroup>  
   
-   <Import Project="NativeDeps.csproj.include" />
- 
+  <Import Project="NativeDeps.csproj.include"/>
+   
+  <!-- Hide .include files from solution -->
+  <ItemGroup>
+	<None  Update="*.csproj.include" Visible="false" />
+  </ItemGroup>   
+  
+  <Target Name="DebugVars" AfterTargets="Build" >
+	<Message Text="Configuration $(NativeDependenciesConfiguration)" Importance="high"/>
+	<Message Text="Platform $(NativeDepsPlatform)" Importance="high"/>	 
+  </Target>
+  
 </Project>
