--- a/.gitignore
+++ b/.gitignore
@@ -259,5 +259,4 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
-/PTIRelianceLib/build/PTIRelianceLib.deps.json
-/PTIRelianceLib/build/PTIRelianceLib.xml
+/PTIRelianceLib/build/*
