--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,23 +24,17 @@ dotnet_csproj:
   file_version: '{version}'
   informational_version: '{version}'
 nuget:
-  account_feed: true
-  project_feed: true
+  account_feed: false
+  project_feed: false
 build_script:
 - cmd: tools\build_project.bat
 test_script:
 - cmd: tools\run_tests.bat
 artifacts:
 - path: PTIRelianceLib/build
-  name: /.*\.nupkg/
+  name: /PTIRelianceLib/build/.*\.nupkg/
 before_deploy:
 - cmd: tools/build_nuget.bat
-deploy:
-- provider: NuGet
-  api_key:
-    secure: j2HSt2MmWcMnybRgjqyxd77tzRE0FNsYoyHJXaZG8Pe6m60lLaNpU9ywb/DKsLNO
-  on:
-    branch: release
 after_build:
   - ps: |
         if(-Not $env:APPVEYOR_PULL_REQUEST_TITLE)
