--- a/appveyor.yml
+++ b/appveyor.yml
@@ -41,7 +41,7 @@ after_build:
         {
             # & nuget install docfx.console -Version 2.18.4 -Source https://www.myget.org/F/docfx/api/v3/index.json
             # & docfx.console.2.18.4\tools\docfx docfx.json
-            & docfx docfx.json
+            & docfx docsource\docfx.json
             if ($lastexitcode -ne 0){
               throw [System.Exception] "docfx build failed with exit code $lastexitcode."
             }
