--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,6 +43,7 @@ after_build:
               throw [System.Exception] "docfx build failed with exit code $lastexitcode."
             }
             
+            git config --global core.autocrlf input
             git config --global credential.helper store
             Add-Content "$env:USERPROFILE\.git-credentials" "https://$($env:access_token):x-oauth-basic@github.com`n"
             git config --global user.email $env:op_build_user_email
@@ -53,4 +54,4 @@ after_build:
             git add -A 2>&1
             git commit -m "CI Updates" -q
             git push origin gh-pages -q
-        }    
+        }
