--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,23 +34,16 @@ artifacts:
   name: /PTIRelianceLib/build/.*\.nupkg/
 before_deploy:
 - cmd: tools/build_nuget.bat
-after_build:
-  - ps: |
-        if(-Not $env:APPVEYOR_PULL_REQUEST_TITLE)
-        {
-            & docfx docsource\docfx.json
-            if ($lastexitcode -ne 0){
-              throw [System.Exception] "docfx build failed with exit code $lastexitcode."
-            }            
-            git config --global core.autocrlf true
-            git config --global credential.helper store
-            Add-Content "$env:USERPROFILE\.git-credentials" "https://$($env:access_token):x-oauth-basic@github.com`n"
-            git config --global user.email $env:op_build_user_email
-            git config --global user.name $env:op_build_user
-            git clone https://github.com/PyramidTechnologies/PTI.Reliance.Tools.git -b gh-pages origin_site -q
-            Copy-Item origin_site/.git _site -recurse
-            CD _site
-            git add -A 2>&1
-            git commit -m "CI Updates" -q
-            git push origin gh-pages -q
-        }
+on_success:
+  - git config --global core.autocrlf true
+  - git config --global credential.helper store
+  - ps: Add-Content "$HOME\.git-credentials" "https://$($env:access_token):x-oauth-basic@github.com`n"
+  - git config --global user.email "Bert"
+  - git config --global user.name "bertbot@pyramidacceptors.com"
+  - git clone https://github.com/PyramidTechnologies/PTI.Reliance.Tools.git -b gh-pages origin_site -q
+  - ps: Copy-Item origin_site/.git _site -recurse
+  - ps: CD _site
+  - git add -A 2>&1  
+  - ps: Copy-Item origin_site/.git _site -recurse  
+  - git commit -m "CI Updates" -q
+  - git push push origin gh-pages -q
