--- a/appveyor.yml
+++ b/appveyor.yml
@@ -41,7 +41,7 @@ on_success:
   - git config --global user.email "Bert"
   - git config --global user.name "bertbot@pyramidacceptors.com"
   - git clone https://github.com/PyramidTechnologies/PTI.Reliance.Tools.git -b gh-pages _site -q
-  - ps: & docfx docsource\docfx.json
+  - ps: docfx docsource\docfx.json
   - ps: CD _site
   - git add -A 2>&1
   - git commit -m "CI Updates" -q
