--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,5 @@
 version: 0.2.{build}
 environment:
-  op_build_user: "Bert"
-  op_build_user_email: "bertbot@pyramidacceptors.com"
   access_token:
     secure: YSFDm4ei5xaIqx0zLMGKHXz/No0BEXDrBxdViLp1W8GKKEAmDu/mXP9fL0Bjh4jg
 pull_requests:
@@ -38,7 +36,7 @@ on_success:
   - git config --global core.autocrlf true
   - git config --global credential.helper store
   - ps: Add-Content "$HOME\.git-credentials" "https://$($env:access_token):x-oauth-basic@github.com`n"
-  - git config --global user.email "Bert"
+  - git config --global user.email "Bert Bot"
   - git config --global user.name "bertbot@pyramidacceptors.com"
   - git clone https://github.com/PyramidTechnologies/PTI.Reliance.Tools.git -b gh-pages _site -q
   - ps: docfx docsource\docfx.json
