--- a/PTIRelianceLib/PTIRelianceLib.csproj
+++ b/PTIRelianceLib/PTIRelianceLib.csproj
@@ -11,16 +11,18 @@
     <Copyright>2018</Copyright>
     <PackageLicenseUrl>https://pti.mit-license.org/</PackageLicenseUrl>
     <PackageReleaseNotes>Supports flash updating, confguration read, and configuration write</PackageReleaseNotes>
-    <Version>0.2.6.0-alpha</Version>
+    <Version>0.2.10.0-alpha</Version>
     <PackageProjectUrl>https://github.com/PyramidTechnologies/PTI.Reliance.Tools</PackageProjectUrl>
     <RepositoryUrl>https://github.com/PyramidTechnologies/PTI.Reliance.Tools</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>dotnet-core thermal-printer hid</PackageTags>
     <PackageIconUrl>https://pyramidacceptors.com/favicon.ico</PackageIconUrl>
-    <AssemblyVersion>0.2.6.0</AssemblyVersion>
+    <AssemblyVersion>0.2.10.0</AssemblyVersion>
 	<GenerateDocumentationFile>true</GenerateDocumentationFile>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <FileVersion>0.2.6.0</FileVersion>
+    <FileVersion>0.2.10.0</FileVersion>
+	<IncludeSource>true</IncludeSource>
+	<IncludeSymbols>true</IncludeSymbols>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -54,6 +56,6 @@
   <Target Name="DebugVars" AfterTargets="Build">
 	<Message Text="Configuration $(NativeDependenciesConfiguration)" Importance="high" />
 	<Message Text="Platform $(NativeDepsPlatform)" Importance="high" />	 
-  </Target>
+  </Target> 
   
 </Project>
