Embedded debug symbols are the way to go!
Also push the symbols explicitly to smbsrc even though nuget docs say this happens
automatically. Liars.

--- a/PTIRelianceLib/PTIRelianceLib.csproj
+++ b/PTIRelianceLib/PTIRelianceLib.csproj
@@ -11,16 +11,16 @@
     <Copyright>2018</Copyright>
     <PackageLicenseUrl>https://pti.mit-license.org/</PackageLicenseUrl>
     <PackageReleaseNotes>Supports flash updating, confguration read, and configuration write</PackageReleaseNotes>
-    <Version>0.2.11.0-alpha</Version>
+    <Version>0.2.12.0-alpha</Version>
     <PackageProjectUrl>https://github.com/PyramidTechnologies/PTI.Reliance.Tools</PackageProjectUrl>
     <RepositoryUrl>https://github.com/PyramidTechnologies/PTI.Reliance.Tools</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>dotnet-core thermal-printer hid</PackageTags>
     <PackageIconUrl>https://pyramidacceptors.com/favicon.ico</PackageIconUrl>
-    <AssemblyVersion>0.2.11.0</AssemblyVersion>
+    <AssemblyVersion>0.2.12.0</AssemblyVersion>
 	<GenerateDocumentationFile>true</GenerateDocumentationFile>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <FileVersion>0.2.11.0</FileVersion>
+    <FileVersion>0.2.12.0</FileVersion>
 	<IncludeSource>true</IncludeSource>
 	<IncludeSymbols>true</IncludeSymbols>
   </PropertyGroup>
@@ -32,10 +32,11 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <NoWarn>1701;1702;NU5100</NoWarn>
+    <DebugType>embedded</DebugType>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <Content Include="..\lib\x64\linux\libhidapi.so" Visible="false">
       <PackagePath>runtimes/linux/native/libhidapi.so</PackagePath>
       <Pack>true</Pack>
@@ -50,7 +51,11 @@
     </Content>
   </ItemGroup>  
   
-  <Import Project="NativeDeps.csproj.include" />
+  <Import Project="NativeDeps.csproj.include" />  
+  
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
    
   <!-- Hide .include files from solution -->
   <ItemGroup>
