--- a/samples/reliance-dotnet-cli-docker/.vscode/launch.json
+++ b/samples/reliance-dotnet-cli-docker/.vscode/launch.json
@@ -12,7 +12,7 @@
             "justMyCode": false,
             "sourceFileMap": {
                 "/app": "${workspaceRoot}/src",
-                "F:\\code\\dotnet\\PTIReliance\\PTIRelianceLib":"${workspaceRoot}/../../PTIRelianceLib"
+                "F:\\code\\dotnet\\PTIReliance\\PTIRelianceLib":"${workspaceRoot}/../../PTIRelianceLib",                
             },
             "pipeTransport": {
                 "pipeProgram": "docker",
