These strings in HidInfo should be unicode, not ansi

--- a/RelianceCLI/Properties/launchSettings.json
+++ b/RelianceCLI/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "RelianceCLI": {
       "commandName": "Project",
-      "commandLineArgs": "-f \"C:\\Users\\cory\\Documents\\reliance_1.27.171.ptix\""
+      "commandLineArgs": "-r"
     }
   }
 }
