Getting closer to figuring out why we lose HID connection on reboot inside Docker
Using inotify we can see that events are correctly propagting. Upon debug
inspection I found that hidapi was giving me an invalid path. The original path
is used throughout the duration of the app so any reconnection will fail when
the OS creates a new device path for it.

--- a/samples/reliance-dotnet-cli-docker/.vscode/launch.json
+++ b/samples/reliance-dotnet-cli-docker/.vscode/launch.json
@@ -29,8 +29,17 @@
                     "http://referencesource.microsoft.com/symbols",
                     "http://srv.symbolsource.org/pdb/Public",
                     "http://srv.symbolsource.org/pdb/MyGet",
-                    "http://msdl.microsoft.com/download/symbols",
+                    "http://msdl.microsoft.com/download/symbols",                    
                 ], 
+                "moduleFilter": {
+                    "mode": "loadAllButExcluded",
+                    "excludedModules": [
+                        "System.Private.CoreLib.dll", 
+                        "System.Runtime.InteropServices.dll",
+                        "System.Runtime.InteropServices.dll",
+                        "System.Console.dll"
+                    ]
+                },
                 "cachePath": "/symcache",                
             }
         }
