--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,17 +4,18 @@
    // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
    "version": "0.2.0",
    "configurations": [
+
         {
             "name": ".NET Core Launch (console)",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/RelianceCLI/bin/Debug/netcoreapp2.0/RelianceCLI.dll",
-            "args": [],
+            "program": "${workspaceFolder}/RelianceCLI/bin/x64/Debug/netcoreapp2.0/RelianceCLI.dll",
+            "args": ["-r", "-p"],
             "cwd": "${workspaceFolder}/RelianceCLI",
             // For more information about the 'console' field, see https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md#console-terminal-window
-            "console": "internalConsole",
+            "console": "externalTerminal",
             "stopAtEntry": false,
             "internalConsoleOptions": "openOnSessionStart"
         },
