--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,11 +7,15 @@
             "type": "process",
             "args": [
                 "build",
-                "-c Release",
+                "-c", "Debug",
                 "/p:Platform=x64",
                 "${workspaceFolder}/RelianceCLI/RelianceCLI.csproj"
             ],
-            "problemMatcher": "$msCompile"
+            "problemMatcher": "$msCompile",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
 }
