--- a/samples/reliance-dotnet-cli-docker/src/Dockerfile.debug
+++ b/samples/reliance-dotnet-cli-docker/src/Dockerfile.debug
@@ -1,9 +1,9 @@
-FROM microsoft/dotnet:2-sdk
+FROM microsoft/dotnet:2.1-sdk
 ENV NUGET_XMLDOC_MODE skip
 WORKDIR /vsdbg
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
-       unzip libusb-1.0-0-dev  \
+       unzip libusb-1.0-0-dev usbutils inotify-tools \
     && rm -rf /var/lib/apt/lists/* \
     && curl -sSL https://aka.ms/getvsdbgsh | bash /dev/stdin -v latest -l /vsdbg
 
@@ -12,6 +12,7 @@ WORKDIR /app
 
 COPY nuget.config ./
 COPY *.csproj /app
+COPY monitor_usb.sh /app
 RUN dotnet restore --configfile nuget.config
 
 COPY *.cs /app/
