--- a/samples/reliance-dotnet-cli-docker/src/reliance-dotnet-cli-docker.csproj
+++ b/samples/reliance-dotnet-cli-docker/src/reliance-dotnet-cli-docker.csproj
@@ -6,7 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NLog.Config" Version="4.5.6" />
     <PackageReference Include="PTIRelianceLib" Version="0.2.14-alpha" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <None Update="NLog.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>  
 
 </Project>
