--- a/PTIRelianceLib/PTIRelianceLib.csproj
+++ b/PTIRelianceLib/PTIRelianceLib.csproj
@@ -8,7 +8,7 @@
     <Authors>Cory Todd &lt;cory@pyramidacceptors.com&gt;</Authors>
     <Company>Pyramid Technologies Inc.</Company>
     <Description>A Reliance Thermal printer API that support firmware updates and configuration. This requires the Reliance printer to be connected via USB.</Description>
-    <Copyright>2018</Copyright>
+    <Copyright>2018 Pyramid Technologies</Copyright>
     <PackageLicenseUrl>https://pti.mit-license.org/</PackageLicenseUrl>
     <PackageReleaseNotes>Supports flash updating, confguration read, and configuration write</PackageReleaseNotes>
     <Version>0.2.18.0-alpha</Version>
