--- a/samples/reliance-dotnet-cli-docker/src/Dockerfile.debug
+++ b/samples/reliance-dotnet-cli-docker/src/Dockerfile.debug
@@ -18,6 +18,9 @@ RUN dotnet restore --configfile nuget.config
 COPY *.cs /app/
 RUN dotnet publish -c Debug /p:Platform=x64 -o out
 COPY reliance_1.27.171.ptix /app/out/
+COPY NLog.config /app/out/
+
+RUN /app/monitor_usb.sh &
 
 # Kick off a container just to wait debugger to attach and run the app
 ENTRYPOINT ["/bin/bash", "-c", "sleep infinity"]
