Add new docs for LibraryOptions
Expand doc details in other areas. Clean up code highlighting.

--- a/docsource/tutorials/toc.yml
+++ b/docsource/tutorials/toc.yml
@@ -6,5 +6,9 @@
   href: configuration.md
 - name: Status Check
   href: status_check.md
-- name: Customizations
-  href: customizations.md  
+- name: Library Logging
+  href: logging.md    
+- name: Library Customization
+  href: customization.md  
+- name: Docker Support
+  href: docker.md
